--- a/Book/Pages/Shared/_Layout.cshtml
+++ b/Book/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index">Academic Users</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Students/Index">Students</a>
+                        </li>
                     </ul>
                 </div>
             </div>
