--- a/Book/Pages/Index.cshtml
+++ b/Book/Pages/Index.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="landing">
+    <div class="home-wrap">
+        <div class="home-inner"></div>
+    </div>
 </div>
