--- a/Book/wwwroot/css/site.css
+++ b/Book/wwwroot/css/site.css
@@ -59,8 +59,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: whitesmoke;
 }
 .footer {
   position: absolute;
@@ -68,4 +69,36 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+
+
+.landing {
+    width: 100%;
+    height: 100vh;
+    z-index: 0;
+    display: table;
+    position: relative;
+}
+
+.home-wrap {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    clip: rect(0, auto, auto, 0);
+}
+
+.home-inner {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-size: cover;
+    background-position: center center;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: transform;
+    display: table;
+    background-image: url(https://western.edu/wp-content/uploads/2020/06/home-hero-poster.jpg);
 }
