--- a/Book/Pages/Users/Index.cshtml
+++ b/Book/Pages/Users/Index.cshtml
@@ -8,59 +8,45 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a class="btn btn-sm btn-primary" asp-page="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.User[0].FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User[0].MiddleName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User[0].LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User[0].College)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User[0].Photo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User[0].UserType)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.User.Where(u=>u.UserType.ToString()!="Student")) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MiddleName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.College)
-            </td>
-            <td>
-                <div style=" background-size: cover;height: 50px; background-image: url('@item.Photo')"></div>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserType)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a class="text-danger" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="container justify-content-center">
+    <div class="row">
+        @foreach (var item in Model.User)
+        {
+            <div class="col-md-4">
+                <div class="card p-3 py-4 mt-5 mb-5">
+                    <div class="text-center">
+                        <img src="@item.Photo" width="100" class="rounded-circle">
+                        <h3 class="mt-2">@item.FirstName @item.MiddleName @item.LastName</h3>
+                        <span class="mt-1 clearfix">@item.College</span>
+                        <small class="mt-4">@item.UserType</small>
+                        <div class="mt-2">
+                            <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                            <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                            <a class="text-danger" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                        </div>
+                        <div class="social-buttons mt-4">
+                            <button class="neo-button">
+                                <i class="fa fa-facebook fa-1x"></i>
+                            </button>
+
+                            <button class="neo-button">
+                                <i class="fa fa-linkedin fa-1x"></i>
+                            </button>
+
+                            <button class="neo-button">
+                                <i class="fa fa-google fa-1x"></i>
+                            </button>
+
+                            <button class="neo-button">
+                                <i class="fa fa-youtube fa-1x"></i> 
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
