--- a/Book/wwwroot/css/site.css
+++ b/Book/wwwroot/css/site.css
@@ -102,3 +102,65 @@ body {
     display: table;
     background-image: url(https://western.edu/wp-content/uploads/2020/06/home-hero-poster.jpg);
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Noto Sans', sans-serif
+}
+
+.card {
+    border-radius: 20px;
+    background: #eeeeee;
+    box-shadow: 20px 20px 60px #cacaca, -20px -20px 60px #ffffff;
+    border: none
+}
+
+    .card img {
+        border-radius: 50%;
+        background: linear-gradient(145deg, #d6d6d6, #ffffff);
+        box-shadow: 20px 20px 60px #cacaca, -20px -20px 60px #ffffff
+    }
+
+.neo-button {
+    width: 40px;
+    height: 40px;
+    outline: 0 !important;
+    cursor: pointer;
+    color: #fff;
+    font-size: 15px;
+    border: none;
+    margin-right: 10px;
+    border-radius: 50%;
+    background: linear-gradient(145deg, #d6d6d6, #ffffff);
+    box-shadow: 20px 20px 60px #cacaca, -20px -20px 60px #ffffff
+}
+
+    .neo-button:active {
+        border-radius: 50%;
+        background: linear-gradient(145deg, #d6d6d6, #ffffff);
+        box-shadow: inset 20px 20px 60px #cacaca, inset -20px -20px 60px #ffffff
+    }
+
+.fa-facebook {
+    color: #3b5998
+}
+
+.fa-linkedin {
+    color: #0077b5
+}
+
+.fa-google {
+    color: #dc4e41
+}
+
+.fa-youtube {
+    color: #cd201f
+}
+
+.fa-twitter {
+    color: #55acee
+}
