--- a/Book/Pages/Students/Edit.cshtml
+++ b/Book/Pages/Students/Edit.cshtml
@@ -5,49 +5,51 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="container">
+    <h1>Edit</h1>
 
-<h4>Student</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Student.Id" />
-            <div class="form-group">
-                <label asp-for="Student.FirstName" class="control-label"></label>
-                <input asp-for="Student.FirstName" class="form-control" />
-                <span asp-validation-for="Student.FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Student.MiddleName" class="control-label"></label>
-                <input asp-for="Student.MiddleName" class="form-control" />
-                <span asp-validation-for="Student.MiddleName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Student.LastName" class="control-label"></label>
-                <input asp-for="Student.LastName" class="form-control" />
-                <span asp-validation-for="Student.LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Student.College" class="control-label"></label>
-                <input asp-for="Student.College" class="form-control" />
-                <span asp-validation-for="Student.College" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Student.Photo" class="control-label"></label>
-                <input asp-for="Student.Photo" class="form-control" />
-                <span asp-validation-for="Student.Photo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>Student</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Student.Id" />
+                <div class="form-group">
+                    <label asp-for="Student.FirstName" class="control-label"></label>
+                    <input asp-for="Student.FirstName" class="form-control" />
+                    <span asp-validation-for="Student.FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Student.MiddleName" class="control-label"></label>
+                    <input asp-for="Student.MiddleName" class="form-control" />
+                    <span asp-validation-for="Student.MiddleName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Student.LastName" class="control-label"></label>
+                    <input asp-for="Student.LastName" class="form-control" />
+                    <span asp-validation-for="Student.LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Student.College" class="control-label"></label>
+                    <input asp-for="Student.College" class="form-control" />
+                    <span asp-validation-for="Student.College" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Student.Photo" class="control-label"></label>
+                    <input asp-for="Student.Photo" class="form-control" />
+                    <span asp-validation-for="Student.Photo" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
+    <div>
+        <a asp-page="./Index">Back to List</a>
+    </div>
 </div>
 
 @section Scripts {
