--- a/Book/Pages/Users/Index.cshtml
+++ b/Book/Pages/Users/Index.cshtml
@@ -5,21 +5,20 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a class="btn btn-sm btn-primary" asp-page="Create">Create New</a>
-</p>
-
 <div class="container justify-content-center">
+    <h1>Index</h1>
+    <p>
+        <a class="btn btn-sm btn-primary" asp-page="Create">Create New</a>
+    </p>
+
     <div class="row">
         @foreach (var item in Model.User)
         {
             <div class="col-md-4">
                 <div class="card p-3 py-4 mt-5 mb-5">
                     <div class="text-center">
-                        <img src="@item.Photo" width="100" class="rounded-circle">
-                        <h3 class="mt-2">@item.FirstName @item.MiddleName @item.LastName</h3>
+                        <img src="@item.Photo" width="100" height="100" class="rounded-circle">
+                        <h3 class="mt-2">@item.FirstName @item.MiddleName</h3>
                         <span class="mt-1 clearfix">@item.College</span>
                         <small class="mt-4">@item.UserType</small>
                         <div class="mt-2">
@@ -41,7 +40,7 @@
                             </button>
 
                             <button class="neo-button">
-                                <i class="fa fa-youtube fa-1x"></i> 
+                                <i class="fa fa-youtube fa-1x"></i>
                             </button>
                         </div>
                     </div>
