--- a/Book/wwwroot/css/site.css
+++ b/Book/wwwroot/css/site.css
@@ -1,6 +1,9 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -54,8 +57,9 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    font-family: 'Noto Sans', sans-serif
 }
 
 body {
@@ -103,13 +107,27 @@ body {
     background-image: url(https://western.edu/wp-content/uploads/2020/06/home-hero-poster.jpg);
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Noto Sans', sans-serif
+
+.news-card {
+    border-radius: 8px
+}
+
+.news-feed-image {
+    border-radius: 8px;
+    width: 100%
+}
+
+.date {
+    font-size: 12px
+}
+
+.username {
+    color: blue
+}
+
+.share {
+    color: blue
 }
 
 .card {
