--- a/Book/Pages/Privacy.cshtml
+++ b/Book/Pages/Privacy.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<div class="container">
+    <h1 class="mt-5 text-center text-primary">Mohammed Bahaddin</h1>
+</div>
