--- a/Book/Pages/CollegeNews/Edit.cshtml
+++ b/Book/Pages/CollegeNews/Edit.cshtml
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="News.NewsType" class="control-label"></label>
-                    <select asp-for="News.NewsType" class="form-control"></select>
+                    <select asp-for="News.NewsType" class="form-control" asp-items="Model.NewsTypes"></select>
                     <span asp-validation-for="News.NewsType" class="text-danger"></span>
                 </div>
                 <div class="form-group">
