--- a/Book/Pages/CollegeNews/Index.cshtml
+++ b/Book/Pages/CollegeNews/Index.cshtml
@@ -24,20 +24,24 @@
                         </div>
                         <div class="col-md-8">
                             <div class="news-feed-text">
-                                <h5>@item.Title</h5><span>@item.Content<br></span>
+                                <h5>@item.Title</h5>
+                                <h6 class="text-info">@item.NewsType</h6>
+                                <span>@item.Content<br></span>
                                 <div class="d-flex flex-row justify-content-between align-items-center mt-3">
                                     <div class="d-flex creator-profile">
                                         <img class="rounded-circle" src="@item.Photo" width="50" height="50">
-                                        <div class="d-flex flex-column ml-3">
-                                            <h6 class="username">@item.Author</h6>
+                                        <div class="d-flex flex-column ml-3 mt-3">
+                                            <h6 class="username text-info">By @item.Author</h6>
                                         </div>
-                                    </div><i class="fa fa-share share"></i>
-                                </div>
-                                <div class="footer fixed-bottom">
+                                    </div>
+                                    <div>
+
                                     <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                                     <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
                                     <a class="text-danger" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                                    </div>
                                 </div>
+                              
                             </div>
                         </div>
                     </div>
