--- a/Book/Pages/Shared/_Layout.cshtml
+++ b/Book/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/CollegeNews/Index">News</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/Events/Index">Events</a>
+                        </li>
                     </ul>
                 </div>
             </div>
