--- a/Book/Pages/Events/Create.cshtml
+++ b/Book/Pages/Events/Create.cshtml
@@ -5,48 +5,49 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Event</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Event.Title" class="control-label"></label>
-                <input asp-for="Event.Title" class="form-control" />
-                <span asp-validation-for="Event.Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Event.Photo" class="control-label"></label>
-                <input asp-for="Event.Photo" class="form-control" />
-                <span asp-validation-for="Event.Photo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Event.Author" class="control-label"></label>
-                <input asp-for="Event.Author" class="form-control" />
-                <span asp-validation-for="Event.Author" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Event.Content" class="control-label"></label>
-                <input asp-for="Event.Content" class="form-control" />
-                <span asp-validation-for="Event.Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Event.EventType" class="control-label"></label>
-                <select asp-for="Event.EventType" class="form-control"></select>
-                <span asp-validation-for="Event.EventType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="container">
+    <h1 class="img-thumbnail btn-sm btn-primary">Create</h1>
+    <h4>Event</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Event.Title" class="control-label"></label>
+                    <input asp-for="Event.Title" class="form-control" />
+                    <span asp-validation-for="Event.Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.Photo" class="control-label"></label>
+                    <input asp-for="Event.Photo" class="form-control" />
+                    <span asp-validation-for="Event.Photo" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.Author" class="control-label"></label>
+                    <input asp-for="Event.Author" class="form-control" />
+                    <span asp-validation-for="Event.Author" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.Content" class="control-label"></label>
+                    <input asp-for="Event.Content" class="form-control" />
+                    <span asp-validation-for="Event.Content" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.EventType" class="control-label"></label>
+                    <select asp-for="Event.EventType" class="form-control" asp-items="Model.EventTypes"></select>
+                    <span asp-validation-for="Event.EventType" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-page="Index">Back to List</a>
+    <div>
+        <a asp-page="Index">Back to List</a>
+    </div>
 </div>
 
 @section Scripts {
