--- a/Book/Pages/CollegeNews/Delete.cshtml
+++ b/Book/Pages/CollegeNews/Delete.cshtml
@@ -24,7 +24,7 @@
                 @Html.DisplayNameFor(model => model.News.Photo)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.News.Photo)
+                <div style=" background-size: cover;height: 70px;width:70px; background-image: url('@Model.News.Photo')"></div>
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.News.Author)
