--- a/Book/Pages/CollegeNews/Details.cshtml
+++ b/Book/Pages/CollegeNews/Details.cshtml
@@ -16,13 +16,15 @@
             @Html.DisplayNameFor(model => model.News.Title)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.News.Title)
+            <h1 class="text-primary font-weight-bolder">
+                @Html.DisplayFor(model => model.News.Title)
+            </h1>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.News.Photo)
         </dt>
         <dd class="col-sm-10">
-            <div style=" background-size: cover;height: 70px;width:70px; background-image: url('@Model.News.Photo')"></div>
+            <div style=" background-size: cover;height: 75vh;width:100%; background-image: url('@Model.News.Photo')"></div>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.News.Author)
