--- a/Book/Pages/Shared/_Layout.cshtml
+++ b/Book/Pages/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    @*<partial name="_LoginPartial" />*@
+                    <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Users/Index">Academic Users</a>
@@ -37,7 +37,7 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="pb-3 pt-3">
+    <main role="main" class="pb-3 pt-5">
         @RenderBody()
     </main>
 
