--- a/Book/Pages/Students/Create.cshtml
+++ b/Book/Pages/Students/Create.cshtml
@@ -29,6 +29,21 @@
                     <span asp-validation-for="Student.LastName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="Student.Grade" class="control-label"></label>
+                    <input asp-for="Student.Grade" class="form-control" />
+                    <span asp-validation-for="Student.Grade" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Student.Group" class="control-label"></label>
+                    <input asp-for="Student.Group" class="form-control" />
+                    <span asp-validation-for="Student.Group" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Student.Department" class="control-label"></label>
+                    <select asp-for="Student.Department" class="form-control" asp-items="Model.Departments"></select>
+                    <span asp-validation-for="Student.Department" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Student.College" class="control-label"></label>
                     <input asp-for="Student.College" class="form-control" />
                     <span asp-validation-for="Student.College" class="text-danger"></span>
