--- a/Book/Pages/Students/Details.cshtml
+++ b/Book/Pages/Students/Details.cshtml
@@ -30,6 +30,9 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Student.LastName)
             </dd>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Student.Grade)
+            </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Student.College)
             </dt>
