--- a/Book/Pages/Students/Edit.cshtml
+++ b/Book/Pages/Students/Edit.cshtml
@@ -31,6 +31,16 @@
                     <span asp-validation-for="Student.LastName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="Student.Grade" class="control-label"></label>
+                    <input asp-for="Student.Grade" class="form-control" />
+                    <span asp-validation-for="Student.Grade" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Student.Group" class="control-label"></label>
+                    <input asp-for="Student.Group" class="form-control" />
+                    <span asp-validation-for="Student.Group" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Student.College" class="control-label"></label>
                     <input asp-for="Student.College" class="form-control" />
                     <span asp-validation-for="Student.College" class="text-danger"></span>
